--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,10 +1,11 @@
 <h1>Portfolio Items Index</h1>
 
-<% @portfolios_items.each do |portfolio_item| %>
+<% @portfolio_items.each do |portfolio_item| %>
   <h2><%= portfolio_item.title %></h2>
   <h3><%= portfolio_item.subtitle %></h3>
   <p><%= portfolio_item.body %></p>
-  <%= image_tag portfolio_item.thumb_image %>
+  <%= image_tag(portfolio_item.thumb_image ||=
+                Faker::Placeholdit.image("350x200", 'jpg')) %>
 <% end %>
 
 
